[tool.black]
line_length = 88
target_version = ["py37", "py38"]

[tool.coverage.run]
branch = true
source = ["pvpcbill"]

[tool.coverage.paths]
source = ["pvpcbill/"]

[tool.coverage.report]
fail_under = 75
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.poetry]
name = "pvpcbill"
version = "1.0.0"
description = "Electrical billing for small consumers in Spain using PVPC"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azogue/pvpcbill"

[tool.poetry.dependencies]
python = "^3.7"
aiopvpc = "2.0.1"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
cattrs = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest-sugar = "0.9.2"
pytest = "5.3.5"
pytest-cov = "2.8.1"
pytest-timeout = "1.3.3"
pytest-aiohttp = "0.3.0"
pre-commit = "^2.2.0"
black = "19.10b0"
flake8 = "3.7.9"
flake8-broken-line = "0.1.1"
flake8-bugbear = "20.1.0"
flake8-builtins = "1.4.2"
flake8-comprehensions = "3.1.4"
flake8-import-order = "0.18.1"
flake8-mutable = "1.2.0"
flake8-pie = "0.4.2"
flake8-quotes = "2.1.1"
flake8-string-format = "0.2.3"
flake8-tidy-imports = "3.1.0"
pep8-naming = "0.9.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
